--- a/subnotes/ln10.tex
+++ b/subnotes/ln10.tex
@@ -1,23 +1,101 @@
 \chapter{It's Time to Get a Little Complex}
-Hello
 
 \section{Review of Imaginary Numbers}
-\subsection{Definition of Imaginary Numbers}
-Hello
+There are several things in this world we claim ``imaginary''; for example, a 4.0 GPA, a job that makes you fulfilled the entire life, a lifelong motivation, and my friends.
+But, numbers may be imaginary too. This naming comes from the sense that there are ``real'' numbers we can somehow quantify, and ``imaginary'' numbers that violate the rules of mathematics.
+Particularly, imaginary numbers are multiples of this value $\sqrt{-1}$:
+\[
+    ImaginaryNumbers = \{y \sqrt{-1} | y \in \mathbb{R}\}
+\]
+As an abbreviation, we shall from here on denote $i = \sqrt{-1}$.
 
-\subsection{Arithmetics of Imaginary Numbers}
-Hello
+The arithmetics of imaginary numbers can be easily summarized with the following rules:
+\begin{enumerate}
+    \item $\forall y_1, y_2 \in \R, i y_1 + i y_2 = i (y_1 + y_2)$
+    \item $i ^ 2 = -1$
+    \item $\frac{i}{i} = 1$
+\end{enumerate}
 
 \section{Review of Complex Numbers}
 \subsection{Definition of Complex Numbers}
-Hello
+A complex number is the sum of a real number $x$ and an imaginary number $iy$:
+\[
+    \mathbb{C} = {x + y\sqrt{-1}| x, y \in \mathbb{R}}
+\]
+Alternatively, we can also express a complex number $z$ in its decomposed form:
+\[
+    Z = Re\{z\} + i Im\{z\}
+\]
+where $Re\{z\}$, $Im\{z\}$ are respectively the real component of the complex number and the coefficient of the imaginary component of complex number.
 
-\subsection{Arithmetics of Complex Numbers}
-Hello
+The fundamental arithmetics of complex numbers follows precisely those rules for imaginary numbers.
+Outside of those rules, there are some interesting arithmetic properties.
+The first is the definition of \textbf{complex conjugate}:
+\begin{ln-define}{Complex Conjugate}{}
+    The complex conjugate of a complex number $x + iy$ is defined to be $x - iy$.
+    We denote the complex conjugate for a complex number $z = x + iy$ to be $z^* = x - iy$, such that:
+    \begin{align*}
+        Re\{z\} &= \frac{z + z^*}{2} \\
+        Im\{z\} &= \frac{z - z^*}{2} \\
+        z \times z^* &= x^2 + y^2
+    \end{align*}
+    We also call the positive square root of $z \times z^*$ the modulus (or magnitude) of $z$.
+\end{ln-define}
 
 \section{Trigonometric Representation of Complex Numbers}
 \subsection{Exponentials}
-Hello
+Remember from Calculus 2 (or Calculus BC) that the exponential of a real number $x$ can be expressed as an infinite-term polynomial:
+\[
+    e^x = \sum_{k=0}^\infty \frac{x^k}{k}
+\]
+And such infinite series expansion exists for cosine and sine as well:
+\begin{align*}
+    \cos(\theta) &= \sum_{k=0}^\infty {(-1)}^k \frac{\theta^(2k)}{(2k)!} \\
+    \sin(\theta) &= \sum_{k=0}^\infty {(-1)}^k \frac{\theta^(2k + 1)}{(2k + 1)!}
+\end{align*}
+
+And through some derivation, we can discover the following formula:
+\begin{ln-theorem}{Euler's Formula}{}
+    \textbf{\textit{Statement.}} We may claim that:
+    \[
+        e^{i \theta} = \cos(\theta) + i \sin(\theta)
+    \]
+    \tcblower
+    \textbf{\textit{Proof.}} Using the previously exhibited infinite series expansions for exponentials and trigonometric functions:
+    \begin{align*}
+        e^{i \theta}
+        &= 1 + (i \theta) + \frac{{(i \theta)}^2}{2!} + \frac{{(i \theta)}^3}{3!} + \cdots \\
+        &= [1 - \frac{\theta^2}{2!} + \frac{\theta^4}{4!} - \cdots] + i [\theta - \frac{\theta^3}{3} + \frac{\theta^5}{5} - \cdots] \\
+        &= \cos(\theta) + i \sin(\theta)
+    \end{align*}
+\end{ln-theorem}
+And using such formula, we can even derive that:
+\begin{align*}
+    \cos(\theta) &= \frac{e^{i \theta} + e^{-i \theta}}{2} \\
+    \sin(\theta) &= \frac{e^{i \theta} - e^{-i \theta}}{2i}
+\end{align*}
+
+% Can use this to make proof questions about trigonometric identities!
 
 \subsection{Polar Coordinates}
-Hello
+Previously we have expressed complex numbers in its real-imaginary decomposition, such that $z = x + i y$.
+This is known as a Cartesian representation.
+
+An alternative method of expressing complex numbers is using polar coordinates, which conveys the following translation rules from a Cartesian representation:
+\begin{align*}
+    z &= x + i y \\
+    &= |z| (\frac{x}{|z|} + i \frac{y}{|z|}) \\
+    &= |z| (\cos(\theta) + i \sin(\theta)) = |z| e^{i \theta}
+\end{align*}
+where $\theta = \tan^{-1} (\frac{y}{x})$ is the angle between the vector representation of $z$, $\begin{bmatrix} x & y \end{bmatrix}^T$, and the positive x-axis.
+Here, we then find that we can express any complex number in a two-dimensional coordinate system $(|z|, \theta)$.
+
+Interestingly, following all arithmetic rules we have discussed before, we would find that
+\[
+    z_1 z_2 = |r_1||r_2| e^{i (\theta_1 + \theta_2)}
+\]
+From this, we make make two conclusions:
+\begin{bindenum}
+    \item $|z_1 z_2| = |z_1| |z_2|$, which entirely follows the polar representation of a complex number.
+    \item $\angle (z_1, z_2) = \angle(z_1) + \angle(z_2)$, which we can see from the added exponents in the polar representation of product of complex numbers.
+\end{bindenum}
